--- a/index.html
+++ b/index.html
@@ -2,66 +2,226 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liverpool Fan Shop</title>
-    <link id="favicon" rel="icon" href="Liverpool-FC-80s-icon.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
-    <!-- Google Tag Manager Should Go Here -->
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T6JRFHHT');</script>
-<!-- End Google Tag Manager -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <title>Gorilla Gains</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+        body { 
+            font-family: 'Inter', sans-serif; 
+            -webkit-tap-highlight-color: transparent; 
+            padding-top: env(safe-area-inset-top);
+            background-color: #f8fafc;
+        }
+        .btn-press:active { transform: scale(0.97); opacity: 0.8; }
+        input[type="number"] { -moz-appearance: textfield; }
+        input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+    </style>
 </head>
-<body>
-    <!-- Google Tag Manager (noscript) should go here-->
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T6JRFHHT"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Welcome to the Liverpool Fan Shop!</h1>
-        <p>Browse our collection of products.</p>
-        <section class="products">
-            <div class="product-list">
-                <div class="product">
-                     <div class="content">
-                        <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b4e36fa3-7a09-463d-ba35-0aff51968a97/LFC+M+NK+DF+JSY+SS+STAD+HM.png" alt="Rat Painting">
+<body class="select-none">
+    <div id="app" class="max-w-md mx-auto min-h-screen relative pb-32"></div>
+
+    <input type="file" id="importFile" accept=".json" class="hidden" onchange="handleImport(event)">
+
+    <script>
+        const BANDS = [
+            { name: '#0 Orange', color: '#ff8c00' },
+            { name: '#1 Purple', color: '#800080' },
+            { name: '#2 Red', color: '#ff0000' },
+            { name: '#3 Blue', color: '#0000ff' },
+            { name: '#4 Green', color: '#008000' },
+            { name: '#5 Black', color: '#000000' },
+            { name: '#6 Yellow', color: '#ffff00' }
+        ];
+
+        const WORKOUTS = {
+            PUSH: ['Chest Press', 'Overhead Press', 'Tricep Extension', 'Front Squats', 'Back Squats'],
+            PULL: ['Romanian Deadlift', 'Bent-Over Rows', 'Bicep Curls', 'Calf Raises', 'Shrugs']
+        };
+
+        let state = {
+            view: 'dashboard',
+            logs: JSON.parse(localStorage.getItem('gorilla_final_v1') || '[]'),
+            currentWorkout: null
+        };
+
+        function saveLocal() {
+            localStorage.setItem('gorilla_final_v1', JSON.stringify(state.logs));
+            render();
+        }
+
+        function exportData() {
+            const dataStr = JSON.stringify(state.logs, null, 2);
+            const blob = new Blob([dataStr], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = `gorilla-gains-backup-${new Date().toISOString().split('T')[0]}.json`;
+            link.click();
+        }
+
+        function triggerImport() { document.getElementById('importFile').click(); }
+
+        function handleImport(event) {
+            const file = event.target.files[0];
+            if (!file) return;
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                try {
+                    const importedLogs = JSON.parse(e.target.result);
+                    if (confirm(`Restore ${importedLogs.length} sessions from backup?`)) {
+                        state.logs = importedLogs;
+                        saveLocal();
+                    }
+                } catch (err) { alert("Invalid file."); }
+            };
+            reader.readAsText(file);
+        }
+
+        function calculateNextIntensity() {
+            if (state.logs.length === 0) return 'MEDIUM';
+            const cycle = ['LIGHT', 'MEDIUM', 'HEAVY'];
+            const last = state.logs[0].intensity;
+            return cycle[(cycle.indexOf(last) + 1) % 3];
+        }
+
+        function startWorkout(type) {
+            state.currentWorkout = {
+                id: Date.now(),
+                date: new Date().toISOString(),
+                type,
+                intensity: calculateNextIntensity(),
+                exercises: WORKOUTS[type].map(name => ({
+                    name, reps: '', bands: [], setup: 'Doubled', completed: false
+                }))
+            };
+            state.view = 'workout';
+            window.scrollTo(0,0);
+            render();
+        }
+
+        function render() {
+            const app = document.getElementById('app');
+            if (state.view === 'dashboard') renderDashboard(app);
+            else if (state.view === 'workout') renderWorkout(app);
+            else if (state.view === 'history') renderHistory(app);
+            else if (state.view === 'settings') renderSettings(app);
+            renderNav(app);
+        }
+
+        function renderDashboard(app) {
+            app.innerHTML = `
+                <div class="p-6 pt-12 space-y-8">
+                    <header>
+                        <h1 class="text-5xl font-black italic tracking-tighter leading-none">GORILLA<br>GAINS</h1>
+                        <p class="text-[10px] font-black text-slate-400 uppercase tracking-widest mt-2">Serious Steel Fitness</p>
+                    </header>
+                    <div class="space-y-4">
+                        <button onclick="startWorkout('PUSH')" class="btn-press w-full bg-slate-900 text-white p-8 rounded-[2.5rem] text-left shadow-2xl">
+                            <p class="text-2xl font-black italic uppercase">Push Session</p>
+                            <p class="text-[10px] font-bold opacity-40 uppercase tracking-widest">Chest • Delts • Triceps • Quads</p>
+                        </button>
+                        <button onclick="startWorkout('PULL')" class="btn-press w-full bg-white border-2 border-slate-100 text-slate-900 p-8 rounded-[2.5rem] text-left shadow-sm">
+                            <p class="text-2xl font-black italic uppercase">Pull Session</p>
+                            <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Back • Hams • Biceps • Traps</p>
+                        </button>
                     </div>
-                    <h3>Liverpool Jersey</h3>
-                    <p>$100</p>
-                    <button onclick="addToCart('Liverpool Jersey', 100)">Add to Cart</button>
-                </div>
-                <div class="product">
-                    <div class="content">
-                        <img src="https://images.stockx.com/images/Nike-Air-Max-95-OG-Liverpool-FC.jpg?fit=fill&bg=FFFFFF&w=690&h=520&q=57&dpr=2&trim=color&updated_at=1743706052" alt="Liverpool Air Max Shoes">
+                    <div class="bg-blue-600 text-white p-6 rounded-[2rem] shadow-lg shadow-blue-200">
+                        <p class="text-[10px] font-black uppercase opacity-60 tracking-widest">Cycle Phase:</p>
+                        <p class="text-xl font-black italic uppercase leading-none">${calculateNextIntensity()}</p>
                     </div>
-                    <h3>Nike Air Max - Liverpool Shoes</h3>
-                    <p>$150</p>
-                    <button onclick="addToCart('Nike Air Max - Liverpool Shoes', 150)">Add to Cart</button>
-                </div>
-                <div class="product">
-                <div class="content">
-                        <img src="https://store.liverpoolfc.com/media/catalog/product/cache/1a0cb1341925e7af2209243f094808d7/7/6/76685-HERO-000095.png">
+                </div>`;
+        }
+
+        function renderWorkout(app) {
+            const wk = state.currentWorkout;
+            app.innerHTML = `
+                <div class="bg-white/90 backdrop-blur-md sticky top-0 z-50 p-6 flex justify-between items-center border-b border-slate-100">
+                    <button onclick="state.view='dashboard'; render()" class="text-xs font-black text-slate-400 uppercase">Exit</button>
+                    <div class="text-center">
+                        <p class="text-[9px] font-black text-slate-400 uppercase tracking-tighter">${wk.intensity}</p>
+                        <p class="font-black italic uppercase leading-none">${wk.type}</p>
                     </div>
-                    <h3>Liverpool 24-25 Champions Shirt</h3>
-                    <p>$175</p>
-                    <button onclick="addToCart('Liverpool 24-25 Champions Shirt', 175)">Add to Cart</button>
+                    <button onclick="state.logs.unshift(state.currentWorkout); state.view='dashboard'; saveLocal();" class="bg-slate-900 text-white px-5 py-2 rounded-2xl text-xs font-black italic uppercase">Save</button>
                 </div>
-            </div>
-        </section>
-    </main>
-    <script src="script.js"></script>
+                <div class="p-4 space-y-4">
+                    ${wk.exercises.map((ex, idx) => `
+                        <div class="bg-white p-6 rounded-[2.5rem] border ${ex.completed ? 'border-emerald-500 bg-emerald-50/10' : 'border-slate-100 shadow-sm'}">
+                            <div class="flex justify-between items-start mb-4">
+                                <h3 class="font-black italic uppercase text-lg leading-tight w-2/3">${ex.name}</h3>
+                                <input type="checkbox" ${ex.completed ? 'checked' : ''} onchange="state.currentWorkout.exercises[${idx}].completed = this.checked; render()" class="w-8 h-8 rounded-full border-2">
+                            </div>
+                            <div class="grid grid-cols-2 gap-3 mb-4">
+                                <button onclick="state.currentWorkout.exercises[${idx}].setup = (state.currentWorkout.exercises[${idx}].setup === 'Doubled' ? 'Singled' : 'Doubled'); render()" class="bg-slate-50 p-3 rounded-2xl text-[10px] font-black uppercase italic">${ex.setup}</button>
+                                <input type="number" value="${ex.reps}" oninput="state.currentWorkout.exercises[${idx}].reps = this.value" class="bg-slate-50 p-3 rounded-2xl text-center font-black italic" placeholder="REPS">
+                            </div>
+                            <div class="flex flex-wrap gap-2">
+                                ${BANDS.map(b => `
+                                    <button onclick="const bds = state.currentWorkout.exercises[${idx}].bands; state.currentWorkout.exercises[${idx}].bands = bds.includes('${b.name}') ? bds.filter(n => n !== '${b.name}') : [...bds, '${b.name}']; render()" class="px-3 py-2 rounded-xl text-[9px] font-black border-2 transition-all ${ex.bands.includes(b.name) ? 'bg-slate-900 text-white border-slate-900' : 'bg-white text-slate-300 border-slate-50'}">
+                                        ${b.name.split(' ')[1]}
+                                    </button>
+                                `).join('')}
+                            </div>
+                        </div>`).join('')}
+                </div>`;
+        }
+
+        function renderHistory(app) {
+            app.innerHTML = `
+                <div class="p-6 pt-12">
+                    <h1 class="text-4xl font-black italic uppercase tracking-tighter mb-8">History</h1>
+                    <div class="space-y-4">
+                        ${state.logs.map((log, i) => `
+                            <div class="bg-white p-6 rounded-[2rem] border border-slate-100 shadow-sm relative overflow-hidden">
+                                <div class="absolute left-0 top-0 bottom-0 w-1.5 ${log.intensity === 'HEAVY' ? 'bg-red-500' : log.intensity === 'MEDIUM' ? 'bg-blue-500' : 'bg-emerald-500'}"></div>
+                                <div class="flex justify-between items-start mb-4">
+                                    <div><p class="font-black italic uppercase text-sm">${log.type} DAY</p><p class="text-[10px] font-bold text-slate-400">${new Date(log.date).toLocaleDateString()}</p></div>
+                                    <button onclick="if(confirm('Delete?')){state.logs.splice(${i},1); saveLocal()}" class="text-slate-200"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="M3 6h18m-2 0v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/></svg></button>
+                                </div>
+                                <div class="space-y-1">
+                                    ${log.exercises.filter(ex => ex.completed).map(ex => `<div class="flex justify-between items-center text-[10px] font-bold uppercase italic"><span class="text-slate-400">${ex.name}</span><span class="text-slate-900">${ex.reps} REPS</span></div>`).join('')}
+                                </div>
+                            </div>`).join('')}
+                    </div>
+                </div>`;
+        }
+
+        function renderSettings(app) {
+            app.innerHTML = `
+                <div class="p-6 pt-12">
+                    <h1 class="text-4xl font-black italic mb-8 uppercase tracking-tighter">Backup</h1>
+                    <div class="space-y-6">
+                        <div class="bg-white p-8 rounded-[2.5rem] border border-slate-100 shadow-sm text-center">
+                            <div class="w-16 h-16 bg-slate-900 text-white rounded-3xl flex items-center justify-center mx-auto mb-4"><svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m4-5 5 5 5-5m-5 5V3"/></svg></div>
+                            <h2 class="text-xl font-black italic uppercase mb-2">Export</h2>
+                            <p class="text-xs text-slate-400 mb-6">Download file to "Save to Files" > "Google Drive".</p>
+                            <button onclick="exportData()" class="btn-press w-full bg-slate-900 text-white py-4 rounded-2xl font-black text-xs uppercase">Download Backup</button>
+                        </div>
+                        <div class="bg-white p-8 rounded-[2.5rem] border border-slate-100 shadow-sm text-center">
+                            <div class="w-16 h-16 bg-emerald-500 text-white rounded-3xl flex items-center justify-center mx-auto mb-4"><svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m-7-7 5-5 5 5m-5-5v12"/></svg></div>
+                            <h2 class="text-xl font-black italic uppercase mb-2">Restore</h2>
+                            <p class="text-xs text-slate-400 mb-6">Select a backup file from your Google Drive.</p>
+                            <button onclick="triggerImport()" class="btn-press w-full bg-emerald-500 text-white py-4 rounded-2xl font-black text-xs uppercase">Upload Backup</button>
+                        </div>
+                    </div>
+                </div>`;
+        }
+
+        function renderNav(app) {
+            if (state.view === 'workout') return;
+            const nav = document.createElement('nav');
+            nav.className = "fixed bottom-8 left-1/2 -translate-x-1/2 w-[90%] bg-white/80 backdrop-blur-2xl border border-white/50 p-2 flex justify-around rounded-[2.5rem] shadow-2xl z-50";
+            nav.innerHTML = `
+                <button onclick="state.view='dashboard'; render()" class="p-4 ${state.view === 'dashboard' ? 'text-slate-900' : 'text-slate-300'}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/></svg></button>
+                <button onclick="state.view='history'; render()" class="p-4 ${state.view === 'history' ? 'text-slate-900' : 'text-slate-300'}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="M12 8v4l3 3"/><circle cx="12" cy="12" r="10"/></svg></button>
+                <button onclick="state.view='settings'; render()" class="p-4 ${state.view === 'settings' ? 'text-slate-900' : 'text-slate-300'}"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m-7-7 5-5 5 5"/></svg></button>
+            `;
+            app.appendChild(nav);
+        }
+
+        render();
+    </script>
 </body>
 </html>
