Convert to Progressive Web App (PWA)
- Add web app manifest (manifest.json) with app metadata and icons
- Add service worker (sw.js) with network-first HTML caching and stale-while-revalidate for assets
- Add offline fallback page (offline.html)
- Add PWA icons in 8 sizes (72-512px) plus apple-touch-icon
- Update index.html with manifest link, theme-color, apple-touch-icon, and service worker registration
- App now supports Add to Home Screen with offline capability

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Gorilla Gains">
+    <meta name="theme-color" content="#0f172a">
+    <meta name="description" content="Serious Steel Fitness — Track your push and pull workouts with resistance bands.">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
     <title>Gorilla Gains</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -274,6 +279,15 @@
         }
 
         render();
+
+        // Register Service Worker for PWA
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then((reg) => console.log('Service Worker registered:', reg.scope))
+                    .catch((err) => console.log('Service Worker registration failed:', err));
+            });
+        }
     </script>
 </body>
 </html>
