--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         function checkDriveReady() {
             driveReady = gapiInited && gisInited;
             if (state.view === 'settings') render();
+            if (driveReady) {
+                // Attempt auto-sync when Drive becomes ready
+                autoSyncOnLaunch();
+            }
         }
 
         // Request Google authorization, then run callback
@@ -223,6 +227,60 @@
             }
         }
 
+        // Auto-save to Drive silently (no prompts, only if already signed in)
+        async function autoSaveToDrive() {
+            if (!driveReady || !isGoogleSignedIn()) return;
+            try {
+                await saveToDrive();
+            } catch (err) {
+                console.error('Auto-save to Drive failed:', err);
+            }
+        }
+
+        // Auto-sync on app launch: compare local vs cloud timestamps
+        async function autoSyncOnLaunch() {
+            if (!driveReady || !isGoogleSignedIn()) return;
+            try {
+                const file = await findBackupFile();
+                if (!file) {
+                    // No cloud backup exists yet — upload local data
+                    if (state.logs.length > 0) {
+                        await saveToDrive();
+                    }
+                    return;
+                }
+
+                const cloudModified = new Date(file.modifiedTime).getTime();
+                const localModified = localStorage.getItem('gorilla_localModified');
+                const localTime = localModified ? new Date(localModified).getTime() : 0;
+
+                if (cloudModified > localTime) {
+                    // Cloud is newer — load from Drive
+                    const response = await gapi.client.drive.files.get({
+                        fileId: file.id,
+                        alt: 'media'
+                    });
+                    const importedLogs = typeof response.result === 'string'
+                        ? JSON.parse(response.result)
+                        : response.result;
+                    if (Array.isArray(importedLogs)) {
+                        state.logs = importedLogs;
+                        localStorage.setItem('gorilla_v1_final', JSON.stringify(state.logs));
+                        localStorage.setItem('gorilla_lastDriveSync', new Date().toISOString());
+                        localStorage.setItem('gorilla_localModified', file.modifiedTime);
+                        showToast('Synced from Google Drive', 'success');
+                        render();
+                    }
+                } else if (localTime > cloudModified) {
+                    // Local is newer — push to Drive
+                    await saveToDrive();
+                }
+                // If equal, do nothing
+            } catch (err) {
+                console.error('Auto-sync failed:', err);
+            }
+        }
+
         // Sign out of Google
         function signOutGoogle() {
             const token = gapi.client.getToken();
@@ -286,6 +344,7 @@
 
         function saveLocal() {
             localStorage.setItem('gorilla_v1_final', JSON.stringify(state.logs));
+            localStorage.setItem('gorilla_localModified', new Date().toISOString());
             render();
         }
 
@@ -305,6 +364,14 @@
             const cycle = ['LIGHT', 'MEDIUM', 'HEAVY'];
             const last = state.logs[0].intensity;
             return cycle[(cycle.indexOf(last) + 1) % 3];
+        }
+
+        function finishWorkout() {
+            state.logs.unshift(state.currentWorkout);
+            state.view = 'dashboard';
+            saveLocal();
+            // Auto-save to Google Drive in the background
+            autoSaveToDrive();
         }
 
         function startWorkout(type) {
@@ -400,7 +467,7 @@
                         <p class="text-[9px] font-black text-slate-400 uppercase tracking-tighter">${wk.intensity} PHASE</p>
                         <p class="font-black italic uppercase leading-none text-slate-900">${wk.type}</p>
                     </div>
-                    <button onclick="state.logs.unshift(state.currentWorkout); state.view='dashboard'; saveLocal();" class="bg-slate-900 text-white px-5 py-2 rounded-2xl text-xs font-black italic uppercase">Save</button>
+                    <button onclick="finishWorkout()" class="bg-slate-900 text-white px-5 py-2 rounded-2xl text-xs font-black italic uppercase">Save</button>
                 </div>
                 <div class="p-4 space-y-4">
                     ${wk.exercises.map((ex, idx) => `
