--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             nav.innerHTML = `
                 <button onclick="state.view='dashboard'; render()" class="p-4 ${state.view === 'dashboard' ? 'text-slate-900' : 'text-slate-300'} transition-colors"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/></svg></button>
                 <button onclick="state.view='history'; render()" class="p-4 ${state.view === 'history' ? 'text-slate-900' : 'text-slate-300'} transition-colors"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg></button>
-                <button onclick="state.view='settings'; render()" class="p-4 ${state.view === 'settings' ? 'text-slate-900' : 'text-slate-300'} transition-colors"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m-7-7 5-5 5 5"/></svg></button>
+                <button onclick="state.view='settings'; render()" class="p-4 ${state.view === 'settings' ? 'text-slate-900' : 'text-slate-300'} transition-colors"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"/></svg></button>
             `;
             app.appendChild(nav);
         }
